checked company routes,added userRoutes

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,14 @@
+# Mongodb setup
 MONGODB_URI="mongodb+srv://kpvishnu10987:pWTLrVAixVseRUP8@cluster0.l63cl7c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-CLERK_WEBHOOK_SECRET = ""
+
+# Cloudinary setup
+CLOUDINARY_NAME = "dhcvsjdsj"
+CLOUDINARY_API_KEY = "277974973237877"
+CLOUDINARY_SECRET_KEY = "7P5JI1isWc1voNbhrsEzF38xtEc"
+
+JWT_SECRET = "dev#secret"
+
+# Clerk setup
+CLERK_WEBHOOK_SECRET = "whsec_nYlk503tmPpsOHXUMcm5BZyO/otaf14i"
+CLERK_PUBLISHABLE_KEY=pk_test_aHVtYW5lLWNhcmlib3UtNTAuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_aBogt8N7fjm0nRdATYid8ck6AshBTdgmytXaAuMKMi
